# second-brain

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: EXTENDING.md  RECIPES.md
mcp/: servers.json
recipes/: calculator-seven.yaml  safari-google.yaml
rules/: default.yaml  destructive.yaml
scripts/: check_system.py  setup.sh
secondbrain/: __init__.py  cli.py  config.py  control_cua.py  control_driver.py  core.py  default_config.yaml  eval.py  logging.py  models.py  provider_cursor.py  recipes.py  rules.py  webui.py
